Actions
Bug #7365
closedFile::NULL is not in documentation
Bug #7365:
File::NULL is not in documentation
Description
The File::NULL / IO::NULL constant is not documented in either the File or IO documentation.
Updated by zzak (zzak _) almost 14 years ago
- Category set to doc
- Assignee set to zzak (zzak _)
- Target version set to 2.0.0
Updated by zzak (zzak _) almost 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r37744.
Misty, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- file.c (File::NULL): Document File::NULL constant
[ruby-core:49384] [Bug #7365]
Actions