* file.c (File::NULL): Document File::NULL constant   [ruby-core:49384] [Bug #7365]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37744 b2dd03c8-39d4-4d8f-98ff-823fe69b080e